<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dialog_text_color"
        android:textSize="@dimen/dialog_titlesize"
        android:text="@string/calendar_setting"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/title_background_strong" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/calendar_button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_indicator"
                android:text="@string/button_search"
                android:textColor="@color/button_default_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/calendar_button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_indicator"
                android:text="@string/button_cancel"
                android:textColor="@color/button_default_text"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>